# mountain-peaks

./: Dockerfile  README.md  docker-compose.yml  docker-python-kubernetes.yaml  pyproject.toml  requirements.txt
mountain-peaks/: main.py
mountain_peaks/backend/: main.py
mountain_peaks/backend/app/: crud_ops.py  schemas.py
mountain_peaks/backend/db/: config.py  create.py  models.py
secrets/: postgres_user.txt
tests/: test_routes_and_crud_ops.py
